Remove custom model data support and language system
- Remove all CustomModelData handling across EditorManager, GUIs,
  DisplayStorage, and lang files
- Replace Lang class with static colorize utility
- Remove language switching (lang command, setLanguage,
  getCurrentLanguage, Polish text, en.yml)
- Hardcode all English UI strings inline
- Update config.yml: remove language option, English wand text